io:task1 test passed